# wezzapp

./: Cargo.toml  LICENSE  README.md
crates/wezzapp-cli/: Cargo.toml
crates/wezzapp-cli/src/: cli.rs  main.rs  prompter.rs  store.rs
crates/wezzapp-cli/src/handlers/: configure.rs  get.rs  mod.rs
crates/wezzapp-core/: Cargo.toml
crates/wezzapp-core/src/: credentials.rs  lib.rs  provider.rs  weather_service.rs
crates/wezzapp-core/src/apis/: accu_weather.rs  mod.rs  weather_api.rs
