[package]
name = "wezzapp-core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
serde.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

reqwest = { version = "0.12.24", features = ["blocking", "json"] }
serde_json = "1.0.145"
chrono = { version = "0.4.42", features = ["serde"] }
